@@ -1,3 +1,8 @@
+2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>
+
+	* include/hal_io.h: Add cyg_hal_sys_mkdir() system call
+	* include/hal_intr.h: Add HAL_PLATFORM_RESET() macro
+
 2004-06-21  Alexander Neundorf <alexander.neundorf@jenoptik.com>
 
 	* include/hal_io.h: 
